# SI

./: LICENSE
00._Miscellaneous/: stripeiframe.html
01._modules/html_module/: index.js  myModule.js
01._modules/html_no_module/: index.html
01._modules/node/node_commonjs/: index.js  myModule.js
01._modules/node/node_esmodules/: index.js  myModule.js
02._data_formats/data/: data.json  data.txt  data.xml  me.csv  me.json  me.txt  me.xml  me.yaml
02._data_formats/js/: package-lock.json  package.json  parser.js
02._data_formats/py/: main.py  parsers.py  pyproject.toml
03._python_environments/: encode_decode.py
03._python_environments/testpoetry/: main.py  pyproject.toml
03._python_environments/testpoetry2/: pyproject.toml
04._basic_servers/data_format_translation_servers/data/: data.csv  data.yaml
04._basic_servers/data_format_translation_servers/node/: app.js  package-lock.json  package.json  parsers.js
04._basic_servers/data_format_translation_servers/python/: main.py  pyproject.toml
04._basic_servers/node/: app.js
04._basic_servers/python/: main.py  pyproject.toml
05._date/node/: index.js
05._date/python/: main.py
06._server_to_server/node/: app.js
06._server_to_server/python/: main.py  pyproject.toml
07._dotenv/node/: .env_sample  index.js  package.json
07._dotenv/python/: main.py  pyproject.toml
08._database_documentation/documentation/: classicmodels_mro_docs.html
09._OpenApi/assignment/: FastAPI - Swagger UI.htm  backup_openapi.json
09._OpenApi/assignment/python/: main.py  pyproject.toml
09._OpenApi/node/: app.js  package-lock.json  package.json
09._OpenApi/node/routers/: spacecraftsRouter.js  usersRouter.js
09._OpenApi/python/: main.py  pyproject.toml
09._OpenApi/python/routers/: __init__.py  spacecraft_router.py  users_router.py
12._server-sent_events/assignment/node/: package-lock.json  package.json  tsconfig.json
12._server-sent_events/node/: app.js
12._server-sent_events/node/public/: index.html
12._server-sent_events/python/: main.py  pyproject.toml
13._github_webhooks/assignment/: README.txt
13._github_webhooks/node/: app.js
13._github_webhooks/python/: main.py  pyproject.toml
15._websockets/node/: client.js  index.html  package.json  server.js
15._websockets/python/: connection_manager.py  main.py  pyproject.toml
16._CORS/: index.html
16._CORS/node/: app.js
16._CORS/python/: pyproject.toml
18._redis/node/: app.js  package-lock.json  package.json
18._redis/python/: main.py  pyproject.toml
18._redis/python-pub-sub/: pyproject.toml  subscriber.py
18._redis/python-task-queues/: pyproject.toml  worker.py
19._Web_scraping/node/: app.js  index.html  package-lock.json  package.json
19._Web_scraping/python/1._data_scraper/: data_scraper.py  pyproject.toml
19._Web_scraping/python/2._web_crawler/: pyproject.toml  web_crawler.py
20._graphql/node/: index.js  package-lock.json  package.json
21._sqlite/node/: database.db  index.js  package.json
other_assignments/external_auth/: README.md  index.html  package-lock.json  package.json  tsconfig.json
other_assignments/form_data/: app.js  package-lock.json  package.json
other_assignments/web_scrape/: app.js  index.html  package-lock.json  package.json
(+54 files in other folders)
