[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["madsWesth <72575386+madsWesth@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
