[tool.poetry]
name = "python-pub-sub"
version = "0.1.0"
description = ""
authors = ["madsWesth <72575386+madsWesth@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_pub_sub"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
